--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -35,3 +35,15 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+    - name: Login to dockerhub
+      uses: docker/login-action@v3
+      with:
+       username: ${{ secrets.DOCKER_USERNAME }}
+       password: ${{ secrets.DOCKER_TOKEN }}
+
+    - name: Build and push to dockerhub
+      uses: docker/build-push-action@v5
+      with:
+       context:
+       push: true
+       tags: kicsipixel/githubaction:latest
