--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -44,6 +44,6 @@ jobs:
     - name: Build and push to dockerhub
       uses: docker/build-push-action@v5
       with:
-       context:
+       context: .
        push: true
-       tags: kicsipixel/githubaction:latest
+       tags: kofi2002/slidespeakapi:latest
